Since 0.2.23
  - Remove special support for the QuickSearch box
  - general code cleanup
  - bug fix: tags where not always found when used for custom keys
  - Do not show TB's status bar again after Nostalgy action,
    when the user does not want it
  - Fix bug when a category is selected (Group by sort mode)
  - allow to install on TB 3.1

0.2.23
  - Add explicit size for the preference dialog.

0.2.22
  - fix more issues with TB3

0.2.21
  - improve the test to avoid capturing keys when an input field is focused
  - various fixes for TB 3
  - allow to install on Postbox 1.1, TB 3.0pre, SeaMonkey 2.0

0.2.20
  - repair the "`" thing

0.2.19
  - fix a bug that causes infinite loop when using statistical prediction with tags
  - fix the "`" thing for TB 3

0.2.18
  - integrate support for predicting target folder given the email addresses (contributed by John Gray)
  - fix a bug with recent TB builds
  - some fixes for Postbox

0.2.17
  - fix bugs with TB 3
  - allow it to run with TB 3.0b3
  - new completion mode "Match only the prefix of folder path or name, not any substring" (patch from Laurent Regnier)
  - fix bug when cancelling the creation of an empty tag
  - avoid XUL bug that prevents rule selection to be highlighted in the
    preference dialog

0.2.16
  - allow it to run with TB 3.0
  - added an explicit license file (zlib/libpng-like)
  - bug fix: RETURN did not work in QuickSearch when searching in message bodies
  - suggest to create a folder when it does not exist (for Go/Copy/Move operations)

0.2.15
  - bug fix: the G command did not work when QuickSearch is not shown in 
    the toolbar
  - bug fix: in some situations, some keys were lost just after
    the Nostalgy box was opened
  - remove some harmless errors in the Error Console

0.2.14
  - don't capture keys when another widget want them (e.g. a menu popup)
  - moving dev repository from CVS to SVN with public access
  - when cycling with "`" is over, restore the last search mode